--- a/ally-guide/src/assets/css/style.css
+++ b/ally-guide/src/assets/css/style.css
@@ -112,24 +112,25 @@
   padding:20px;
 }
 
-.carousel-inn{
-position: absolute;
+.carousel-outer .carosel-inn{
+  background-color: #a87653;
 }
 
-.carousel-outer .carousel-inner{
-  overflow: visible;
+.carousel-item .img-fluid{
+  object-fit: fill;
+  height: 415px;
+}
+.carousel .carousel-indicators{
+  margin-bottom:5px;
 }
 .carousel-outer .carousel-caption{
-  position: absolute;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 11%, rgba(5,5,5,0.562062324929972) 69%, rgba(0,0,0,0) 100%);  color:#f7d9a2;
   width: 100%;
-  left: 45vw;
-  color:black;
-  text-shadow:none;
-  text-align: center;
-  top: 45%;
-  padding:0px;
-  height:min-content
-}
+  left: 0;
+  padding-right: 10%;
+  padding-left: 10%;
+  bottom: 0px;
+} 
 
 
   /* Donate
